--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
@@ -3,13 +3,15 @@
     height: 100vh;
 }
 
-#nav-bar{
-    height:7%;
-}
+// #nav-bar{
+//     height:7%;
+//     width: 100%;
+// }
 
  #parent-container{
     background-color: #F5FEFF;
     height:93%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -20,8 +22,9 @@
     background-color: #ffff;
     box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
     border-radius: 6px;
-    width:85%; 
+    width:80%; 
     height: 90%;
+    border: 10px solid red;
 }
 
 #container{
@@ -29,6 +32,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 
 #container3{
@@ -60,6 +64,11 @@
     padding-top: 10px;
 }
 
+#side-bar{
+    width:100%; 
+    height: 100%;
+    border: 10px solid orangered;
+}
 #sub-container1,#sub-container2{
     width: 40%;
     padding: 0px 50px ;
@@ -99,14 +108,14 @@ input{
 }
 
 label{
-    font-size: 25px;
+    font-size: 16px;
 }
 
 #text2{
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 29px;
     padding-top: 30px;
     padding-left: 40px  ;
@@ -118,7 +127,7 @@ label{
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 20px;
     color: #737373;
     padding-top: 30px;
