--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
@@ -1,17 +1,19 @@
 <div id="main-container">
-  <app-navbar [button]="false" [name]="'Dr Akansha Gaonkar'"></app-navbar>
+  <app-navbar [button]="false" [name]="'Dr Akanksha Gaonkar'"></app-navbar>
   <div id="parent-container">
     <app-sidebar [menus]="menus"></app-sidebar>
     <div id="sub-container">
       <div id="text1"><a href="#"></a>Back to Dashboard</div>
       <div id="text2">Update Details</div>
       <div id="container">
-        <form>
+        <form (ngSubmit)="onupdate()">
           <div id="container1">
             <div id="sub-container1">
               <div class="form-group">
                 <label for="first name">First name</label>
-                <input id="first name" type="text" class="form-control" />
+                <!-- <input id="first name" type="text" class="form-control" /> -->
+                <app-input [ipConfig]="ipConfig" (outputEmit)="firstNameReceived($event) "></app-input>
+
               </div>
               <div class="form-group">
                 <label for="email">Email</label>
@@ -25,7 +27,8 @@
             <div id="sub-container2">
               <div class="form-group">
                 <label for="Last name">Last name</label>
-                <input id="last name" type="text" class="form-control" />
+                <!-- <input id="last name" type="text" class="form-control" /> -->
+                <app-input [ipConfig]="ipConfig2" (outputEmit)="lastNameReceived($event) "></app-input>
               </div>
               <div class="form-group">
                 <label for="contactno">Contact No</label>
@@ -44,7 +47,7 @@
             </div>
           </div>
           <div id="container3">
-            <!-- <div id="update-btn"><app-button  class="sub-btn" [btntext]="'UPDATE'" [btnConfig]="textBtnConfig"></app-button></div> -->
+            <div id="update-btn"><app-button  class="sub-btn" [btntext]="'UPDATE'" [btnConfig]="textBtnConfig"></app-button></div>
           </div>
         </form>
       </div>
