--- a/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.html
@@ -2,40 +2,84 @@
     <app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
     <div id="sub-container">
         <div id="image-container">
-            <img id="reg-image" src="assets/images/reg-img.png" alt="reg-image" >
+            <img id="reg-image" src="assets/images/reg-img.png" alt="reg-image">
             <div id="main-text">Your Health Comes First</div>
             <div id="moto-text">With Central Health Log you can manage your personal health reports effectively. </div>
         </div>
         <div id="reg-container">
-                <div id="reg-heading">Register Account</div>
-                <div class="select-user">
-                    <p>Select the User Type</p>
-                    <div id="buttons"><button (click)="addPatient($event)" >Patient</button>
-                    <button (click)="addDoctor($event)">Doctor</button>
-                    </div>
-                </div>    
-                <form *ngIf="patientActive==true">
-                    <div class="form-group"></div>
-                        <div id="name">First Name</div> 
-                        <!-- <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
-                        </div>
-                        <div id="name">Last Name</div> 
-                        <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
-                        </div>
+            <div id="reg-heading">Register Account</div>
+            <div class="select-user">
+                <p>Select the User Type</p>
+                <div id="buttons"><button [ngClass]="{'active': patientActive}" (click)="addPatient($event)">Patient</button>
+                    <button [ngClass]="{'active': !patientActive}" (click)="addDoctor($event)">Doctor</button>
+                </div>
+            </div>
+            <form *ngIf="patientActive==true" [formGroup]="RegistrationForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="firstName">First Name </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="firstNameReceived($event) "></app-input>
+
+                    <label for="lastName">Last Name </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="lastNameReceived($event)"></app-input>
+
+                    <label for="email">Email </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="emailReceived($event)"></app-input>
+
+                    <label for="contact">Contact Number </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="contactReceived($event)"></app-input>
+
+                    <label for="gender">Gender </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="genderReceived($event)"></app-input>
+
+                    <label for="age">Age </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="ageReceived($event)"></app-input>
+
+                    <label for="userID">User ID</label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="useridReceived($event)"></app-input>
+
+                    <label for="password">Password </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="pwdReceived($event)"></app-input>
+
+                </div>
+                <div id="login-btn">
+                    <app-button [btntext]="'Register'" [btnConfig]="textBtnConfig"></app-button>
+                </div>
+            </form>
+
+            <form *ngIf="patientActive==false" (ngSubmit)="onDocSubmit()">
+                <label for="doctorName">Doctor Name </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="docNameReceived($event) "></app-input>
+
+                    <label for="aadhar">Aadhar No </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="aadharReceived($event)"></app-input>
+
+                    <label for="regNO">Registration No </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="regNoReceived($event)"></app-input>
+
+                    <label for="year">Year of Registration </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="yearReceived($event)"></app-input>
+
+                    <label for="council">State Medical Council </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="councilReceived($event)"></app-input>
+
+                    <label for="Qualification">Qualification </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="qualReceived($event)"></app-input>
                     
-                    <div class="form-group">
-                        <div id="pass">Password</div>
-                        <app-input [ipConfig]="ipConfig2" (outputEmit)="onClickEventReceived($event)"></app-input>
-                    </div>
-                </div> -->
+                    <label for="email">Email </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="docEmailReceived($event)"></app-input>
+
+                    <label for="contact">Contact Number </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="docContactReceived($event)"></app-input>
+
+                    <label for="userID">User ID</label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="docIdReceived($event)"></app-input>
+
+                    <label for="password">Password </label>
+                    <app-input [ipConfig]="ipConfig" (outputEmit)="docPwdReceived($event)"></app-input>
                 <div id="login-btn">
-                <app-button  [btntext]="'Register'" [btnConfig]="textBtnConfig"></app-button></div>
-                </form>
-                <form *ngIf="patientActive==false">
-                    <div id="name">Doctor Name</div> 
-                <div id="login-btn">
-                    <app-button  [btntext]="'Register'" [btnConfig]="textBtnConfig"></app-button></div>
-                </form>
+                    <app-button [btntext]="'Register'" [btnConfig]="textBtnConfig"></app-button>
+                </div>
+            </form>
 
         </div>
     </div>
