--- a/CHL-Frontend/src/app/common/navbar/navbar.component.scss
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.scss
@@ -1,25 +1,27 @@
 .navbar {
   background-color: #fff;
-  height: 7%;
+  width: 100%;
+  height: 100%;
   font-family: 'Montserrat';
-  font-size: 35px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 1.25em;
+  box-shadow: 0 0.09em 0.09em rgba(0, 0, 0, 0.25);
 
   span {
     color: #1cb5bd;
   }
 
   .plus {
-    height: 40px;
+    height: 1.35em;
+    font-size: 1.25em;
   }
 
 
   #Profile{
-    display: flex;
-    flex-direction: row;
+    display: inline-flex;
     width: 100%;
     align-items: center;
-    justify-content: space-around;
+    font-size: 1em;
+    // justify-content: space-around;
 }
 .image{
     height: 100%;
