--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
@@ -1,11 +1,13 @@
 <div class="sidebar">
-    <div class="tab" *ngFor="let menu of menus | keyvalue" id="sidebar-element" routerLink={{menu.value[1]}}>
+    <div class="tab"   [ngClass]="{'active': menu.value[2]===1}" *ngFor="let menu of menus | keyvalue" id="sidebar-element" routerLink={{menu.value[1]}}>
+        <div class="item">
         <img id="sidebar-icon" *ngIf="menu.value[0]==='Dashboard'" src="assets/images/Dashboard-icon.svg" width="25"
             height="25">
         <img id="sidebar-icon" *ngIf="menu.value[0]!='Dashboard'" src="assets/images/Sidebar-icons.svg" width="25"
             height="25">
         {{menu.value[0]}}
     </div>
+</div>
     
 </div>
 
