--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
@@ -1,37 +1,42 @@
 .sidebar {
-    width: 20%;
+    width: 100%;
     height: 100%;
-    position: fixed;
-    top: 7.5%;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 1em;
+    line-height: 2em;
     font-family: 'Montserrat';
     font-style: normal;
-    padding-top: 3%;
+    padding-top: 20%;
     background: #FFFFFF;
-    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.16);
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.16);
 }
 
 .tab {
     list-style: none;
     width: 100%;
-    height: 60px;
-    padding-left: 60px;
-    padding-top: 15px;
-    margin-bottom: 20px;
+    height: 3em;
+    // padding-left: 60px;
+    // padding-top: 15px;
+    margin-bottom: 1em;
+    align-items: center;
+    // align-content: center;
+    // justify-content: center;
+    // text-align: center;
     cursor: pointer;
     color: #737373;
     background-color: #ffffff;
 }
 
 
-.tab:hover,.tab:focus,.tab:active {
+.tab:hover,.tab:focus,.tab:active ,.active{
     background-color: #DAFDFF;
     color: #1CB5BD;
     border-right: 4px solid #1CB5BD;
 }
-
+.item{
+    display: inline-block;
+    text-align: left;
+}
 
 
 // #sidebar-icons{
