--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -1,9 +1,13 @@
 <!-- <router-outlet></router-outlet> -->
-<div>
+
 <div class="main-container">
-<app-navbar [button]="false" [name]="'DR Akansha Gaonkar'"></app-navbar>
-<div class="subcontainer">
-<app-sidebar [menus]="menus"></app-sidebar>
-</div>
-</div>
+    <div id="nav">
+        <app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
+    </div>
+    <div class="subcontainer">
+        <div class="flex-item1">
+            <app-sidebar [menus]="menus"></app-sidebar>
+        </div>
+        <div class="flex-item2"></div>
+    </div>
 </div>
