--- a/CHL-Frontend/src/app/app.component.scss
+++ b/CHL-Frontend/src/app/app.component.scss
@@ -1,11 +1,26 @@
-.main-container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #F5FEFF;
+.main-container {
+    width: 100vw;
+    height: 100vh;
 }
-
-.subcontainer{
+#nav{
+    height: 7%;
+    width: 100%;
+}
+.subcontainer {
+    display: flex;
+    flex-direction: row;
     width: 100%;
     height: 93%;
+}
+
+.flex-item1 {
+    width: 18%;
+    height: 100%;
+}
+
+.flex-item2 {
+    margin-left: 0.2em;
+    width: 82%;
+    height: 100%;
+    background-color: #F5FEFF;
 }
