--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -8,6 +8,8 @@
         <div class="flex-item1">
             <app-sidebar [menus]="menus"></app-sidebar>
         </div>
-        <div class="flex-item2"></div>
+        <div class="flex-item2">
+            <div class="main"></div>
+        </div>
     </div>
 </div>
