--- a/CHL-Frontend/src/app/app.component.scss
+++ b/CHL-Frontend/src/app/app.component.scss
@@ -11,6 +11,7 @@
     flex-direction: row;
     width: 100%;
     height: 93%;
+    background-color: #F5FEFF;
 }
 
 .flex-item1 {
@@ -19,8 +20,14 @@
 }
 
 .flex-item2 {
-    margin-left: 0.2em;
     width: 82%;
     height: 100%;
-    background-color: #F5FEFF;
+}
+.main{
+    margin: 2em;
+    width: 94%;
+    height: 90%;
+    background-color: #FFF;
+    box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+border-radius: 0.5em;
 }
