--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
@@ -8,7 +8,7 @@
     font-style: normal;
     padding-top: 20%;
     background: #FFFFFF;
-    box-shadow: 0 0 1em rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 0.2em 1em rgba(0, 0, 0, 0.16);
 }
 
 .tab {
@@ -21,7 +21,7 @@
     align-items: center;
     // align-content: center;
     // justify-content: center;
-    // text-align: center;
+    text-align: center;
     cursor: pointer;
     color: #737373;
     background-color: #ffffff;
@@ -34,7 +34,7 @@
     border-right: 4px solid #1CB5BD;
 }
 .item{
-    display: inline-block;
+    // display: inline-block;
     text-align: left;
 }
 
