--- a/CHL-Frontend/src/app/common/button/button.component.scss
+++ b/CHL-Frontend/src/app/common/button/button.component.scss
@@ -4,7 +4,7 @@ button {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0.7em 1.8em;
+  padding: 0.7em 1.5em;
   gap: 0.5em;
   width: 100%;
 
@@ -17,6 +17,8 @@ button {
   height: 1.2em;
   border: 0.0625 solid #1CB5BD;
   border-radius: 0.25em;
-  font-family: 'Montserrat',
+  font-family: 'Montserrat';
+  line-height: 1em;
+
 
 }
