--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
@@ -2,40 +2,42 @@
     width: 100%;
     height: 100%;
     font-weight: 600;
-    font-size: 1em;
-    line-height: 2em;
+    font-size: 0.9em;
+    line-height: 1.5em;
     font-family: 'Montserrat';
     font-style: normal;
     padding-top: 20%;
     background: #FFFFFF;
     box-shadow: 0px 0.2em 1em rgba(0, 0, 0, 0.16);
+    margin: auto;
 }
 
 .tab {
     list-style: none;
     width: 100%;
     height: 3em;
-    // padding-left: 60px;
-    // padding-top: 15px;
     margin-bottom: 1em;
+    display: flex;
     align-items: center;
-    // align-content: center;
-    // justify-content: center;
-    text-align: center;
+    justify-content: center;
     cursor: pointer;
     color: #737373;
     background-color: #ffffff;
 }
 
 
-.tab:hover,.tab:focus,.tab:active ,.active{
+.tab:hover,
+.tab:focus,
+.tab:active,
+.active {
     background-color: #DAFDFF;
     color: #1CB5BD;
     border-right: 4px solid #1CB5BD;
 }
-.item{
-    // display: inline-block;
-    text-align: left;
+
+.item {
+    // text-align: left;
+    width: 75%;
 }
 
 
