final common components

--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -1,6 +1,6 @@
 
-  <button [type]="btnConfig.type" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
-   <b> {{btntext}}</b>
+  <button [type]="btnConfig.type" class="btn" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
+   {{btntext}}
   </button>
 
 
