--- a/CHL-Frontend/src/app/common/button/button.component.scss
+++ b/CHL-Frontend/src/app/common/button/button.component.scss
@@ -4,14 +4,12 @@ button {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0.7em 1.5em;
+  padding: 0.7em 1.8em;
   gap: 0.5em;
   width: 100%;
 
   font-style: normal;
   font-weight: 500;
-  background: #1CB5BD;
-  color: #fff;
   font-size: 0.85em;
   border-color: #1CB5BD;
   height: 1.2em;
@@ -19,6 +17,15 @@ button {
   border-radius: 0.25em;
   font-family: 'Montserrat';
   line-height: 1em;
+  background: #fff;
+  color: #1CB5BD;
+  box-sizing: border-box;
 
 
+}
+
+button:hover ,
+button:focus {
+  background: #DAFDFF;
+  outline: none;
 }
