--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <nav class="sidebar">
-    <div class="tab"   [ngClass]="{'active': menu.value[2]===1}" *ngFor="let menu of menus | keyvalue" id="sidebar-element" routerLink={{menu.value[1]}}>
+    <div class="tab"  (click)="onClick(menu,menus)" [ngClass]="{'active': menu.value[2]===1}" *ngFor="let menu of menus | keyvalue" id="sidebar-element" routerLink={{menu.value[1]}}>
         <div class="item">
         <img id="sidebar-icon" *ngIf="menu.value[0]==='Dashboard'" src="assets/images/Dashboard-icon.svg" width="25"
             height="25">
@@ -13,7 +13,8 @@
 
 
 <!-- in parent.component.ts file -->
-<!-- tabs={'1':["Dashboard","/patient-dashboard"],'2':["Patient Details","/patient-details"],'3':["Past Records","/past-records"]}; -->
+<!-- in whichever component u r using sidebar,give the value there as 1 and 0 in others -->
+<!-- tabs={'1':["Dashboard","/patient-dashboard",1],'2':["Patient Details","/patient-details",0],'3':["Past Records","/past-records",0]}; -->
 
 <!-- in parent/html -->
 <!-- <app-sidebar [menus]="tabs"></app-sidebar> -->
