--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.scss
@@ -17,6 +17,7 @@
     width: 100%;
     height: 3em;
     margin-bottom: 1em;
+    padding-left: 2.5em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,8 +37,8 @@
 }
 
 .item {
-    // text-align: left;
-    width: 75%;
+    text-align: left;
+    width: 100%;
 }
 
 
