--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -1,15 +1,1 @@
-<!-- <router-outlet></router-outlet> -->
-
-<div class="main-container">
-    <div id="nav">
-        <app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
-    </div>
-    <div class="subcontainer">
-        <div class="flex-item1">
-            <app-sidebar [menus]="menus"></app-sidebar>
-        </div>
-        <div class="flex-item2">
-            <div class="main"></div>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
