--- a/CHL-Frontend/src/app/components/past-records/past-records.component.scss
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.scss
@@ -39,7 +39,6 @@
 //                         color: rgba(0, 0, 0, 0.85);
 //                     }
 
-                    
 //                 }
 
 //                 .right {
@@ -56,12 +55,6 @@
 
 //     }
 // }
-
-
-
-
-
-
 
 // #text1 {
 //     font-family: "Montserrat";
@@ -127,69 +120,144 @@
 
 // }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .main-container {
     width: 100vw;
     height: 100vh;
-}
-#nav{
-    height: 7%;
-    width: 100%;
-}
-.subcontainer {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 93%;
-    background-color: #F5FEFF;
+
+    #nav {
+        height: 7%;
+        width: 100%;
+    }
+
+    .subcontainer {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 93%;
+        background-color: #f5feff;
+
+        .flex-item1 {
+            width: 18%;
+            height: 100%;
+        }
+
+        .flex-item2 {
+            width: 82%;
+            height: 100%;
+
+            .main {
+                margin: 2em;
+                width: 94%;
+                height: 90%;
+                background-color: #fff;
+                box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+                border-radius: 0.5em;
+
+                #text1 {
+                    font-family: "Montserrat";
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 1em;
+                    line-height: 1.25em;
+                    color: #737373;
+                    padding-top: 1.25em;
+                    padding-left: 1.25em;
+                }
+
+                .search-filter {
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 20px;
+
+                    .left {
+                        display: flex;
+                        justify-content: space-between;
+
+                        #sort-by {
+                            width: 5.25em;
+                            height: 1.875em;
+
+                            font-family: "Poppins";
+                            font-style: normal;
+                            font-weight: 600;
+                            font-size: 1.25em;
+                            line-height: 1.875em;
+                            letter-spacing: 0.1em;
+                            color: rgba(0, 0, 0, 0.85);
+                        }
+                    }
+
+                    .right {
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                }
+
+                .table-container {
+                    position: relative;
+                    margin: 1.25em;
+                }
+            }
+        }
+    }
 }
 
-.flex-item1 {
-    width: 18%;
-    height: 100%;
+
+
+
+
+
+
+
+
+
+
+table {
+    position: absolute;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
 }
 
-.flex-item2 {
-    width: 82%;
-    height: 100%;
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
-.main{
-    margin: 2em;
-    width: 94%;
-    height: 90%;
-    background-color: #FFF;
-    box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
-border-radius: 0.5em;
+
+th {
+    background-color: #f5f5f5;
+
+    gap: 4px;
+    isolation: isolate;
+    width: 285.4px;
+    height: 55px;
+    background: #f5f5f5;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: rgba(0, 0, 0, 0.85);
+}
+
+table,
+th,
+td {
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+}
+
+td {
+    height: 22px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: rgba(0, 0, 0, 0.85);
 }
