past record page ui completed (responsiveness left)

--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -114,6 +114,7 @@
           <div class="right">
             <div style="margin-left: 10px;">
               <app-button [btntext]="'Filter by doctor'" [btnConfig]="textBtnConfig"></app-button>
+              <!-- <app-dropdown [states]="optionList" [dropConfig]="textDropConfig"></app-dropdown> -->
             </div>
             <div style="margin-left: 10px;">
               <app-button [btntext]="'Filter severity'" [btnConfig]="textBtnConfig"></app-button>
