reg pg updated css

--- a/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.html
@@ -1,5 +1,7 @@
 <div id="main-container">
-    <app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
+    <div id="nav">
+        <app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
+    </div>
     <div id="sub-container">
         <div id="image-container">
             <img id="reg-image" src="assets/images/reg-img.png" alt="reg-image">
