--- a/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.scss
+++ b/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.scss
@@ -1,7 +1,10 @@
 #main-container {
-    position: absolute;
+    width: 100vw;
+    height: 100vh;
+}
+#nav{
     width: 100%;
-    height: 100%;
+    height: 7%;
 }
 
 #sub-container {
@@ -9,23 +12,17 @@
     height: 93%;
     background-color: #F5FEFF;
     display: inline-flex;
-    // flex-direction: column;
-    // justify-content: space-evenly;
     align-items: center;
 
 }
 
 #image-container {
     width: 40%;
-
 }
 
 #reg-image {
-    position: absolute;
-    width: 617px;
-    height: 480px;
-    left: 70px;
-    top: 179px;
+    padding: 0;
+    margin: 0;
 }
 
 #reg-container {
