--- a/CHL-Frontend/src/app/components/past-records/past-records.component.scss
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.scss
@@ -74,7 +74,7 @@
 
                 .table-container {
                     position: relative;
-                    margin: 1.25em;
+                    margin: 1.25em;                   
                 }
             }
         }
@@ -100,26 +100,26 @@ table {
 
 td,
 th {
-    border: 1px solid #dddddd;
+    border: 0.0625em solid #dddddd;
     text-align: left;
-    padding: 8px;
+    padding: 0.5em;
 }
 
 th {
     background-color: #f5f5f5;
 
-    gap: 4px;
+    gap: 0.25em;
     isolation: isolate;
-    width: 285.4px;
-    height: 55px;
+    width: 17.8em;
+    height: 3.4375em;
     background: #f5f5f5;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+    border-bottom: 0.0625em solid rgba(0, 0, 0, 0.06);
 
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 1em;
+    line-height: 1.375em;
     color: rgba(0, 0, 0, 0.85);
 }
 
@@ -128,16 +128,16 @@ th,
 td {
     border-left: none;
     border-right: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+    border-bottom: 0.0625em solid rgba(0, 0, 0, 0.06);
 }
 
 td {
-    height: 22px;
+    height: 1.375em;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 1em;
+    line-height: 1.375em;
     color: rgba(0, 0, 0, 0.85);
 }
 
